# tesla_dashcam

./: .dockerignore  .gitignore  AUTHORS  DOCKER_OPTIMIZATION.md  Dockerfile  Dockerfile.gpu  Dockerfile.gpu-latest  Dockerfile.nvidia  Dockerfile.pre-release  Dockerfile.pre_release  Dockerfile.vaapi  README.md  README.rst  RunPreferences.bash  create_executable.bash  pyproject.toml  requirements.txt  requirements_create_executable.txt  requirements_create_executable_common.txt  requirements_create_executable_windows.txt  requirements_dev.txt  requirements_windows.txt  setup.py  tesla_video.py
.github/workflows/: codeql-analysis.yml
Preference_Files/: CROSS.txt  CROSS_PERSPECTIVE.txt  CUSTOM.txt  DIAMOND.txt  DIAMOND_PERSPECTIVE.txt  DIAMOND_SCALED.txt  FULLSCREEN.txt  FULLSCREEN_FRONT_ONLY_SCALE1.txt  FULLSCREEN_FRONT_ONLY_SCALE_HIGHLANDER.txt  FULLSCREEN_REAR.txt  HORIZONTAL.txt  MOSAIC_REAR.txt  WIDESCREEN_REAR.txt
bundles/MacOS/: create_executable.bash  requirements_create_executable.txt  tesla_dashcam.icns
bundles/Windows/: create_executable.cmd  requirements_create_executable.txt  setup.cmd
bundles/Windows/tesla_dashcam/: Tesla_Dashcam - README.html  ffmpeg_README.txt
examples/: teslausbarchive.sh
tesla_dashcam/: __init__.py  __main__.py  __version__.py  cli_parsing.py  constants.py  tesla_dashcam.py  utils.py
tesla_dashcam/layout/: __init__.py  base.py  presets.py
tesla_dashcam/models/: __init__.py  event.py  movie.py  video.py
tests/: test_tesla_dashcam.py
tests/unit/: conftest.py  test_cli_parsing.py  test_constants.py  test_tesla_dashcam.py  test_utils.py
tests/unit/layout/: test_base.py  test_cross.py  test_diamond.py  test_fullscreen.py  test_mosaic.py
tests/unit/models/: test_event.py  test_movie.py  test_video.py
