[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesla_dashcam"
dynamic = ["version"]
description = "Python program to merge video files created by Tesla dashcam"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "AUTHORS"]
authors = [
  { name = "Erik Hendrix" },
]
keywords = ["tesla", "dashcam", "sentry", "ffmpeg", "video"]
classifiers = [
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
  "python-dateutil>=2.9.0,<2.10.0",
  "tzlocal>=5.3.1,<5.4.0",
  "requests>=2.32.4,<2.33.0",
  "psutil>=7.0.0,<7.1.0",
  "staticmap>=0.5.7,<0.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "doc8",
  "ruff",
]

# Optional deps used only when building the standalone MacOS/Windows executables
# via the scripts under bundles/.
exe = [
  "pyinstaller>=6.17.0",
  "markdown>=3.10.0",
  "sphinx>=9.0.4",
  "wheel>=0.45.1",
  "pyobjc-framework-Cocoa>=12.0; platform_system == 'Darwin'",
  "win11toast==0.36.2; platform_system == 'Windows'",
]

[project.scripts]
tesla_dashcam = "tesla_dashcam:main"

[project.urls]
Homepage = "https://github.com/ehendrix23/tesla_dashcam"
Repository = "https://github.com/ehendrix23/tesla_dashcam"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tesla_dashcam = ["*.ico", "*.png"]

[tool.setuptools.dynamic]
version = { attr = "tesla_dashcam.__version__.__version__" }

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [
  "build",
  "bundles",
  "Preference_Files",
]

[tool.ruff.lint]
# Keep initial adoption low-friction; expand this over time.
select = ["F"]

[tool.pytest.ini_options]
addopts = "-q"
